--- a/src/css/SwiftFoliosReserch/SwiftFoliosResearch.css
+++ b/src/css/SwiftFoliosReserch/SwiftFoliosResearch.css
@@ -1,184 +1,202 @@
 body {
-    font-family: "Open Sans", sans-serif;
-  }
-  .swift-folios-research-main-header-container {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .swift-folios-research-main-header {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 22px;
-    letter-spacing: -5%;
-  }
-  .swift-folios-research-main-header-search {
-    width: 380px;
-    height: 36px;
-    border: 0.5px solid #e8e8e8;
-    border-radius: 41px;
-    color: #011627;
-    padding: 8px 17px;
-  }
-  .swift-folios-research-container {
-    box-sizing: border-box;
-    margin: 27px 0;
-    width: 887px;
-    height: auto;
-    border: 0.5px solid #e8e8e8;
-    padding: 16px;
-    border-radius: 10px;
-  }
-  .swift-folios-research-container-with-video {
-    display: flex;
-    box-sizing: border-box;
-    margin: 27px 0;
-    width: 887px;
-    height: auto;
-    border: 0.5px solid #e8e8e8;
-    padding: 16px;
-    border-radius: 10px;
-    
-  }
-  .swift-folios-research-row1 {
-    box-sizing: border-box;
-    width: 272px;
-    height: 36px;
-    display: flex;
-    justify-content: center;
-    font-size: 11px;
-    padding: 2px 0px;
-    border: 0.5px solid #e8e8e8;
-    align-items: center;
-    border-radius: 41px;
-    gap: 15px;
-  }
-  .swift-folios-research-fund-name,
-  .swift-folios-research-fund-price {
-    font-weight: 700;
-    line-height: 15px;
-    letter-spacing: -5%;
-  }
-  .swift-folios-research-value-change,
-  .swift-folios-research-per-change {
-    color: #00d72f;
-  }
-  .swift-folios-research-row2 {
-    font-size: 12px;
-    line-height: 16px;
-    letter-spacing: -5%;
-    padding: 19px 0px;
-  }
-  .swift-folios-research-row2-header {
-    font-weight: 700;
-  }
-  .swift-folios-research-row2-date {
-    color: #011627b2;
-  }
-  
-  .swift-folios-research-row3 {
-    display: flex;
-    font-size: 10px;
-    gap: 15px;
-  }
-  .swift-folios-research-row3-container {
-    box-sizing: border-box;
-    width: 111px;
-    height: 64px;
-    padding: 12px;
-    border: 0.5px solid #e8e8e8;
-    border-radius: 10px;
-    line-height: 14px;
-    box-shadow: 0px 0px 4px 0px #e8e8e8;
-  }
-  .swift-folios-research-row3-container > .swift-folios-research-fund-name {
-    font-weight: 600;
-  }
-  video {
-    height: 204px;
-    width: 365px;
-    padding: 20px 0 0 0;
-  }
-  .swift-folios-research-fund-change-container {
-    display: flex;
-    justify-content: space-between;
-  }
-  .swift-folios-research-file-container {
-    display: flex;
-    font-size: 11px;
-    padding: 22px 0;
-    align-items: center;
-  }
-  .swift-folios-research-file-download-button {
-    text-decoration: none;
-    color: #011627;
-    padding: 8px 15px 0 15px;
-  }
-  .swift-folios-research-sub-container{
-    min-width: 550px;
-  }
-  .swift-folios-research-main-top {
-    display: flex;
-    flex-direction: column;
-    gap: 22px;
-    padding-bottom: 69px;
-  }
-  .react-quill-group{
-    margin-bottom: 15px;
-  }
-  .swift-folios-research-top-text {
-    width: 315px;
-    height: 32px;
-    color: #011627;
-    font-weight: 600;
-    letter-spacing: -5%;
-    line-height: 16px;
-    font-size: 12px;
-  }
-  .swift-folios-research-pay-button {
-    width: 122px;
-    height: 35px;
-    background-color: #e8e8e8;
-    border: none;
-    border-radius: 57px;
-    font-weight: 600;
-    opacity: 0px;
-    letter-spacing: -5%;
-    line-height: 16px;
-  }
-  .swift-folios-research-loader {
-    align-items: center;
-    column-gap: 21px;
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    width: 100%;
-    flex-direction: column;
-    row-gap: 20px;
-  }
-  .swift-folios-research-loader p {
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: -0.5px;
-  }
-  
-.stock-label{
+  font-family: "Open Sans", sans-serif;
+}
+.swift-folios-research-main-header-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.swift-folios-research-main-header {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: -5%;
+}
+.swift-folios-research-main-header-search {
+  width: 380px;
+  height: 36px;
+  border: 0.5px solid #e8e8e8;
+  border-radius: 41px;
+  color: #011627;
+  padding: 8px 17px;
+}
+.swift-folios-research-container {
+  box-sizing: border-box;
+  margin: 27px 0;
+  width: 887px;
+  height: auto;
+  border: 0.5px solid #e8e8e8;
+  padding: 16px;
+  border-radius: 10px;
+}
+.swift-folios-research-container-with-video {
+  display: flex;
+  box-sizing: border-box;
+  margin: 27px 0;
+  width: 887px;
+  height: auto;
+  border: 0.5px solid #e8e8e8;
+  padding: 16px;
+  border-radius: 10px;
+}
+.swift-folios-research-row1 {
+  box-sizing: border-box;
+  width: 272px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  font-size: 11px;
+  padding: 2px 0px;
+  border: 0.5px solid #e8e8e8;
+  align-items: center;
+  border-radius: 41px;
+  gap: 15px;
+}
+.swift-folios-research-fund-name,
+.swift-folios-research-fund-price {
+  font-weight: 700;
+  line-height: 15px;
+  letter-spacing: -5%;
+}
+.swift-folios-research-value-change,
+.swift-folios-research-per-change {
+  color: #00d72f;
+}
+
+.swift-folios-research-updated-post-container {
+  overflow-y: auto;
+  max-height: 220px;
+  height: 147px;
+}
+.swift-folios-research-row2 {
+  font-size: 12px;
+  line-height: 16px;
+  max-height: 220px;
+  min-height: 147px;
+  letter-spacing: -5%;
+  padding: 19px 0px;
+}
+.swift-folios-research-row2.with-video {
+  box-sizing: border-box;
+  width: 800px;
+  display: flex;
+  min-height: 220px;
+  padding: 10px;
+}
+.swift-folios-research-original-post-sub-container,
+.swift-folios-research-updated-post-sub-container {
+  width: 414px;
+}
+.swift-folios-research-row2-header {
+  font-weight: 700;
+}
+.swift-folios-research-row2-date {
+  color: #011627b2;
+}
+
+.swift-folios-research-row3 {
+  display: flex;
+  font-size: 10px;
+  gap: 15px;
+}
+.swift-folios-research-row3-container {
+  box-sizing: border-box;
+  width: 111px;
+  height: 64px;
+  padding: 12px;
+  border: 0.5px solid #e8e8e8;
+  border-radius: 10px;
+  line-height: 14px;
+  box-shadow: 0px 0px 4px 0px #e8e8e8;
+}
+.swift-folios-research-row3-container > .swift-folios-research-fund-name {
+  font-weight: 600;
+}
+video {
+  height: 204px;
+  width: 365px;
+  padding: 20px 0 0 0;
+}
+.swift-folios-research-fund-change-container {
+  display: flex;
+  justify-content: space-between;
+}
+.swift-folios-research-file-container {
+  display: flex;
+  font-size: 11px;
+  padding: 22px 0;
+  align-items: center;
+}
+.swift-folios-research-file-download-button {
+  text-decoration: none;
+  color: #011627;
+  padding: 8px 15px 0 15px;
+}
+.swift-folios-research-sub-container {
+  min-width: 550px;
+}
+.swift-folios-research-main-top {
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+  padding-bottom: 69px;
+}
+.react-quill-group {
+  margin-bottom: 15px;
+}
+.swift-folios-research-top-text {
+  width: 315px;
+  height: 32px;
+  color: #011627;
+  font-weight: 600;
+  letter-spacing: -5%;
+  line-height: 16px;
+  font-size: 12px;
+}
+.swift-folios-research-pay-button {
+  width: 122px;
+  height: 35px;
+  background-color: #e8e8e8;
+  border: none;
+  border-radius: 57px;
+  font-weight: 600;
+  opacity: 0px;
+  letter-spacing: -5%;
+  line-height: 16px;
+}
+.swift-folios-research-loader {
+  align-items: center;
+  column-gap: 21px;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+  row-gap: 20px;
+}
+.swift-folios-research-loader p {
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: -0.5px;
+}
+
+.stock-label {
   font-size: 12px;
   font-weight: 600;
   margin: 5px 0;
 }
 
-.read-full-button{
+.read-full-button {
   background: none;
   border: none;
 }
-.read-full-button-group{
+.read-full-button-group {
   display: flex;
 }
 .arrow-up,
 .arrow-down {
-  transition: transform 0.3s ease; 
+  transition: transform 0.3s ease;
   cursor: pointer;
 }
 
