--- a/src/css/BackOffice/BackOffice.css
+++ b/src/css/BackOffice/BackOffice.css
@@ -2,6 +2,11 @@ body{
     font-family: 'Open Sans',sans-serif;
     font-size: 12px;
 }
+.swift-folios-research-back-office-loader{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .swift-folios-research-back-office-main-header{
     font-weight: 700;
     font-size: 16px;
@@ -35,15 +40,21 @@ body{
     gap: 10px;
 }
 .swift-folios-back-office-update-post-container{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     overflow-y: auto;
-    height: 147px;
+    height: 180px;
+    padding: 10px;
     max-height: 220px;
     width: 870px;
     
 }
 .swift-folios-back-office-research-row2{
-    height: 147px;
+    height: auto;
     max-height:220px ;
+    letter-spacing: -5%;
+    padding: 19px 0px;
 }
 .swift-folios-research-back-office-row2-date{
     font-size: 12px;
@@ -52,10 +63,30 @@ body{
     align-items: center;
 }
 .swift-folios-back-office-research-row2.with-video{
-    width: 800px;
+    width: 840px;
     display: flex;
     min-height: 220px;
-    padding: 10px;
+    gap: 70px;
+}
+.back-office-read-more-content{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}.back-office-read-more-content>img{
+    cursor: pointer;
+}
+.down-arrow-icon{
+    transition: transform 0.3s;
+    cursor: pointer;
+}
+.down-arrow-icon.rotate {
+    transform: rotate(180deg);
+  }
+.swift-folios-back-office-read-more-button{
+    border: none;
+    background:none;
+    font-size: 11px;
+    font-weight: 400;
 }
 .swift-folios-research-back-office-row2-date > span{
     font-style: italic;
