--- a/src/css/SwiftFoliosReserch/SwiftFoliosResearch.css
+++ b/src/css/SwiftFoliosReserch/SwiftFoliosResearch.css
@@ -65,24 +65,30 @@ body {
 }
 
 .swift-folios-research-updated-post-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   overflow-y: auto;
+  height: 180px;
+  padding: 10px;
   max-height: 220px;
-  height: 147px;
+  width: 870px;
 }
 .swift-folios-research-row2 {
   font-size: 12px;
   line-height: 16px;
   max-height: 220px;
-  min-height: 147px;
+  height: auto;
   letter-spacing: -5%;
   padding: 19px 0px;
 }
 .swift-folios-research-row2.with-video {
   box-sizing: border-box;
-  width: 800px;
+  width: 840px;
   display: flex;
   min-height: 220px;
   padding: 10px;
+  gap: 70px;
 }
 .swift-folios-research-original-post-sub-container,
 .swift-folios-research-updated-post-sub-container {
@@ -93,8 +99,29 @@ body {
 }
 .swift-folios-research-row2-date {
   color: #011627b2;
+  font-style: italic;
 }
-
+.back-office-read-more-content {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.back-office-read-more-content > img {
+  cursor: pointer;
+}
+.down-arrow-icon {
+  transition: transform 0.3s;
+  cursor: pointer;
+}
+.down-arrow-icon.rotate {
+  transform: rotate(180deg);
+}
+.swift-folios-back-office-read-more-button {
+  border: none;
+  background: none;
+  font-size: 11px;
+  font-weight: 400;
+}
 .swift-folios-research-row3 {
   display: flex;
   font-size: 10px;
