--- a/src/components/BackOffice/BackOfficeUpdateForm.css
+++ b/src/components/BackOffice/BackOfficeUpdateForm.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 .swift-folios-research-back-office-form-container {
-  height: auto;
-  width: 100vw;
+  height: 95vh;
+  width: 95vw;
   min-width: 30vw;
   font-family: "Open Sans", sans-serif;
   letter-spacing: -0.7px;
@@ -10,10 +10,18 @@
   padding: 0 10px;
 }
 
+.swift-folios-research-back-office-loader {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  justify-content: center;
+  gap: 30px;
+  width: auto;
+}
+
 .swift-folios-research-back-office-form-container > form {
   display: flex;
   flex-direction: column;
-  gap: 5px;
 }
 
 .swift-folios-research-back-office-form-submit-button {
@@ -41,9 +49,18 @@
   color: #011627;
   cursor: pointer;
 }
+.swift-folios-research-back-office-form-text-input{
+  font-size: 12px;
+}
 
 .swift-folios-research-back-office-form-image-edit-button {
-  padding: 10px 25px;
+  font-weight: 600;
+  font-size: 12px;
+  color: #011627;
+  cursor: pointer;
+  background: none;
+  border: none;
+  padding: 0 0 10px 0;
 }
 
 .swift-folios-research-back-office-form-image-editor-modal {
@@ -95,5 +112,3 @@
   border: none;
   color: #011627;
 }
-
-
