--- a/src/css/SwiftFoliosReserch/SwiftFoliosResearch.css
+++ b/src/css/SwiftFoliosReserch/SwiftFoliosResearch.css
@@ -22,6 +22,7 @@ body {
   padding: 8px 17px;
 }
 .swift-folios-research-container {
+ 
   box-sizing: border-box;
   margin: 27px 0;
   width: 887px;
@@ -40,14 +41,15 @@ body {
   padding: 16px;
   border-radius: 10px;
 }
-.swift-folios-research-row1 {
+.swift-folios-research-front-row1 {
   box-sizing: border-box;
-  width: 272px;
+  width:fit-content;
+  max-width: 350px;
   height: 36px;
   display: flex;
   justify-content: center;
   font-size: 11px;
-  padding: 2px 0px;
+  padding: 2px 15px;
   border: 0.5px solid #e8e8e8;
   align-items: center;
   border-radius: 41px;
@@ -64,27 +66,34 @@ body {
   color: #00d72f;
 }
 
+
 .swift-folios-research-updated-post-container {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
   overflow-y: auto;
-  height: 180px;
-  padding: 10px;
-  max-height: 220px;
-  width: 870px;
+  max-height: 500px;
+  width: 850px;
+}
+.swift-folios-research-updated-post-container::-webkit-scrollbar{
+  width: 8px;
+}
+.swift-folios-research-updated-post-container::-webkit-scrollbar-thumb{
+  border-radius: 6px;
 }
 .swift-folios-research-row2 {
   font-size: 12px;
   line-height: 16px;
-  max-height: 220px;
+  min-height: 250px;
   height: auto;
+  gap: 20px;
+  border-radius: 10px;
   letter-spacing: -5%;
-  padding: 19px 0px;
+  padding: 15px 9px;
 }
 .swift-folios-research-row2.with-video {
   box-sizing: border-box;
-  width: 840px;
+  /* width: 840px; */
   display: flex;
   min-height: 220px;
   padding: 10px;
@@ -161,7 +170,9 @@ video {
   padding: 8px 15px 0 15px;
 }
 .swift-folios-research-sub-container {
-  min-width: 550px;
+ display: flex;
+ flex-direction: column;
+ gap: 15px;
 }
 .swift-folios-research-main-top {
   display: flex;
