updated css for body text

--- a/src/css/BackOffice/BackOffice.css
+++ b/src/css/BackOffice/BackOffice.css
@@ -91,7 +91,7 @@ body{
   
   .swift-folios-back-office-research-row2 {
     padding: 15px;
-    background: #FAFAFA;
+    background: #FFFFFF;
     letter-spacing: -5%;
     border-radius: 10px;
     display: flex;
