--- a/src/components/CustomComponents/CustomDropdown/CustomDropdown.css
+++ b/src/components/CustomComponents/CustomDropdown/CustomDropdown.css
@@ -3,13 +3,16 @@
 .container {
   position: relative;
   width: 200px;
-  font-family: 'Open Sans',sans-serif;
+  font-family: "Open Sans", sans-serif;
   letter-spacing: -0.7px;
   font-weight: 600;
+
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .dropdown-header {
-  
   font-size: 12px;
   display: flex;
   align-items: center;
@@ -21,45 +24,43 @@
   column-gap: 32px;
   cursor: pointer;
   height: 30px;
-  
+
   justify-content: space-between;
   padding: 5px;
-  
+
   width: 100%;
 }
-.dropdown-label{
+.dropdown-label {
   font-size: 12px;
   color: #011627;
   font-weight: 600;
 }
 
-
-
 .dropdown-list {
-    box-sizing: border-box;
-    position: absolute;
-    padding: 10px 10px;
-    list-style: none;
-    border: 1px solid #ccc;
-    border-top: none;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    color: rgba(1, 22, 39, 0.7);
-    text-align: left;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 20px;
-    letter-spacing: -0.7px;
-    z-index: 100;
-    background-color: #fff;
-    max-height: 90vh;
-    overflow-y: auto;
+  box-sizing: border-box;
+  position: absolute;
+  padding: 10px 10px;
+  list-style: none;
+  border: 1px solid #ccc;
+  border-top: none;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  color: rgba(1, 22, 39, 0.7);
+  text-align: left;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: -0.7px;
+  z-index: 100;
+  background-color: #fff;
+  max-height: 90vh;
+  overflow-y: auto;
 }
 
 .dropdown-item {
-    width: 100%;
+  width: 100%;
   padding: 10px 0;
   cursor: pointer;
 }
