--- a/src/components/ResearchBackOffice/ResearchBackOfficeStockEditForm.css
+++ b/src/components/ResearchBackOffice/ResearchBackOfficeStockEditForm.css
@@ -3,6 +3,18 @@
   cursor: pointer;
   justify-content: space-between;
 }
+.swift-folios-research-back-office-stock-edit-form-container{
+  height:100%;
+  width: 100%;
+}
+.swift-folios-research-back-office-loader {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  justify-content: center;
+  gap: 30px;
+  width: auto;
+}
 .back-office-stock-edit-header>button{
   background:none;
   border: none;
