--- a/src/components/ResearchBackOffice/ResearchBackOfficeUpdateForm.css
+++ b/src/components/ResearchBackOffice/ResearchBackOfficeUpdateForm.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 .swift-folios-research-back-office-form-container {
-  height: 95vh;
+  height: 90vh;
   width: 95vw;
   min-width: 30vw;
   font-family: "Open Sans", sans-serif;
@@ -9,19 +9,67 @@
   box-sizing: border-box;
   padding: 0 10px;
 }
-
-.swift-folios-research-back-office-loader {
+.swift-folios-research-back-office-main-display-edit-loader{
   display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  flex-direction: column;
+  font-size: 14px;
+  gap: 5px;
+}
+.swift-folios-research-back-office-update-modal-loader {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   height: 100%;
   justify-content: center;
-  gap: 30px;
+  gap: 15px;
+  font-size: 14px;
+  font-weight: 600;
   width: auto;
+}
+.swift-folios-research-back-office-form-text-input{
+  margin: 0;
+
+}
+.swift-folios-research-back-office-form-body-text{
+  padding: 0 !important;
+  font-weight: 700;
+  font-size: 12px;
+  color: #011627;
 }
 
 .swift-folios-research-back-office-form-container > form {
   display: flex;
   flex-direction: column;
+}
+
+.back-office-update-form-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.header-dropdown {
+  width: 200px;
+  margin-right: auto;
+  font-weight: 700;
+}
+
+.form-close-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  color: #011627;
+  margin-right: 10px;
+  margin-top: -5px;
+}
+.edit-form-close-button {
+  margin-top: -35px;
 }
 
 .swift-folios-research-back-office-form-submit-button {
@@ -44,41 +92,52 @@
 }
 
 .swift-folios-research-back-office-form-text {
-  font-weight: 600;
+  font-weight: 700;
   font-size: 12px;
   color: #011627;
   cursor: pointer;
 }
-.swift-folios-research-back-office-form-text-input{
+
+.swift-folios-research-back-office-form-text-input {
   font-size: 12px;
+}
+.swift-folios-research-back-office-post-edit-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.header-content {
+  display: flex;
+  justify-content: space-between;
+
+  width: 100%;
 }
 
 .swift-folios-research-back-office-form-image-edit-button {
-  font-weight: 600;
+  font-weight: 700;
   font-size: 12px;
   color: #011627;
   cursor: pointer;
   background: none;
   border: none;
-  padding: 0 0 10px 0;
+  
+}
+.swift-folios-research-back-office-thumbnail-content{
+  display: flex;
+  gap: 5px;
+  padding: 20px 0;
+  align-items: center;
+  margin-top: -15px;
 }
 
 .swift-folios-research-back-office-form-image-editor-modal {
   width: 60vw;
   height: 500px;
   background-color: whitesmoke;
-}
-
-.form-close-button {
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-.swift-folios-research-back-office-post-edit-header,
-.back-office-update-form-header {
-  display: flex;
-  justify-content: space-between;
-  width: 92.5vw;
+  z-index: 1000;
 }
 
 .error-text {
@@ -91,9 +150,10 @@
   display: flex;
   gap: 10px;
 }
+
 .uploaded-file-name {
   font-size: 12px;
-  padding: 10px 0;
+  /* padding: 0 0 10px 0; */
 }
 
 .swift-folios-research-back-office-file-download-button {
@@ -101,14 +161,19 @@
   border: none;
   cursor: pointer;
 }
+
 .swift-folios-research-back-office-file-display {
   display: flex;
   gap: 5px;
 }
+
 .remove-file-button {
   background: none;
   cursor: pointer;
   font-size: 12px;
   border: none;
   color: #011627;
+}
+.swift-folios-research-back-office-video-url{
+  font-weight: 700;
 }
