--- a/src/css/SwiftFoliosReserch/SwiftFoliosResearch.css
+++ b/src/css/SwiftFoliosReserch/SwiftFoliosResearch.css
@@ -84,12 +84,12 @@ body {
 .swift-folios-research-row2 {
   font-size: 12px;
   line-height: 16px;
-  min-height: 250px;
+  max-height: 250px;
   height: auto;
   gap: 20px;
   border-radius: 10px;
   letter-spacing: -5%;
-  padding: 15px 9px;
+  padding: 15px 9px 0 9px;
 }
 .swift-folios-research-row2.with-video {
   box-sizing: border-box;
@@ -124,7 +124,7 @@ body {
   color: #011627;
 }
 .visit{
-  color: #011627B2;
+  color: #011627b2;
 }
 .down-arrow-icon {
   transition: transform 0.3s;
@@ -213,13 +213,14 @@ video {
 }
 .swift-folios-research-loader {
   align-items: center;
-  column-gap: 21px;
+  
   display: flex;
-  height: 100%;
+  height: 94vh;
+  padding-left: 50px;
   justify-content: center;
   width: 100%;
   flex-direction: column;
-  row-gap: 20px;
+  gap: 15px;
 }
 .swift-folios-research-loader p {
   font-size: 14px;
@@ -227,11 +228,7 @@ video {
   letter-spacing: -0.5px;
 }
 
-.stock-label {
-  font-size: 12px;
-  font-weight: 600;
-  margin: 5px 0;
-}
+
 
 .read-full-button {
   background: none;
