--- a/src/components/CustomComponents/SwiftFoliosModal/SwiftFoliosModal.css
+++ b/src/components/CustomComponents/SwiftFoliosModal/SwiftFoliosModal.css
@@ -5,7 +5,7 @@
     height: 100vh;
     display: flex;
     justify-content: center;
-    z-index: 1000000000;
+    z-index: 10000;
 }
 
 .swift-modal .swift-modal-box {
