--- a/src/css/SwiftFoliosReserch/SwiftFoliosResearch.css
+++ b/src/css/SwiftFoliosReserch/SwiftFoliosResearch.css
@@ -95,7 +95,6 @@ body {
   box-sizing: border-box;
   /* width: 840px; */
   display: flex;
-  min-height: 220px;
   padding: 10px;
   gap: 70px;
 }
@@ -171,6 +170,9 @@ video {
   font-size: 11px;
   padding: 22px 0;
   align-items: center;
+}
+.swift-folios-research-file img {
+  cursor: pointer;
 }
 .swift-folios-research-file-download-button {
   text-decoration: none;
